failed test for making sure isbn10 num is correct

--- a/views/isbn1.erb
+++ b/views/isbn1.erb
@@ -3,8 +3,8 @@
         <script src="/js/isbn.js"></script>
         <link rel="stylesheet" type="text/css" href="css/styles.css">
    </head>
-    
     <body>
+        <form method="post" action="isbn1">
 
 
 
@@ -18,7 +18,7 @@
 
 
 
-
+         </form>
 
    </body>
 </html>
