--- a/views/isbn1.erb
+++ b/views/isbn1.erb
@@ -5,6 +5,14 @@
    </head>
     <body>
         <form method="post" action="isbn1">
+            <center>
+            <h2>Welcome to Isbn checker, please enter a isbn<h2>
+                <textarea name="texty" rows="20" cols="75">
+                </textarea>
+                <div class="button">
+                <input type="submit" name="button" ><br>
+                <%=isbn_10_or_13%>
+                <%=checkk%>
 
 
 
@@ -18,7 +26,8 @@
 
 
 
+
+            </center>
          </form>
-
-   </body>
+     </body>
 </html>
